syntax = "proto3";

package personas;

service ProfilesService {
  rpc CreateProfile (CreateProfileDto) returns (Profile) {}
  rpc FindByUserId (FindOneProfileByUserIdDto) returns (Profile) {}
  rpc FindByCompanyId (FindAllByCompanyIdDto) returns (Profiles) {}
  rpc UpdateProfileById (UpdateProfileDto) returns (Profile) {}
}

service CompaniesService {
  rpc CreateCompany (CreateCompanyDto) returns (Company) {}
  rpc AddEmployee (AddEmployeeDto) returns (Profile) {}
  rpc FindByProfileId (FindOneCompanyByProfileId) returns (Company) {}
  rpc UpdateCompany (UpdateCompanyDto) returns (Company) {}
}

message Profile {
  string id = 1;
  string userId = 2;
  string firstName = 3;
  string lastName = 4;
  string iconUrl = 5;
  string role = 6;
}

message Profiles {
  repeated Profile profiles = 1;
}

message Company {
  string id = 1;
  string name = 2;
  string logoUrl = 3;
  string tin = 4;
  string membershipId = 5;
}

message UpdateCompanyDto {
  string id = 1;
  optional string name = 2;
  optional string tin = 3;
  optional string logoUrl = 4;
}

message CreateProfileDto {
  string userId = 1;
  string firstName = 2;
  string lastName = 3;
  string iconUrl = 4;
}

message UpdateProfileDto {
  string profileId = 1;
  optional string firstName = 2;
  optional string lastName = 3;
  optional string iconUrl = 4;
}

message AddEmployeeDto {
  string profileId = 1;
  string companyId = 2;
}

message FindOneProfileByUserIdDto {
  string userId = 1;
}

message FindAllByCompanyIdDto {
  string companyId = 1;
}

message FindOneCompanyByProfileId {
  string profileId = 1;
}

message CreateCompanyDto {
  string ownerId = 1;
  string name = 2;
  string tin = 3;
  string logoUrl = 4;
}